// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn inputs render input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        aria-label="signin modal"
        class="css-ga55b2-Container-SurfaceElevation eu4qea98"
      >
        <button
          aria-label="close signin modal"
          class="css-1mtcji3-TertiaryButton-SurfaceElevation-CloseButton eu4qea90"
        >
          ✕
        </button>
        <h1
          class="css-1r0k3v3-H1-TextMixin e1ez90bh0"
        >
          🦾 WORKOUT
        </h1>
        <h2
          class="css-15441py-H2-TextMixin ewijl6f0"
        >
          Sign In
        </h2>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <input
            class="css-1jng164-Input e19wqegw3"
            id="signin-email-input"
            placeholder="Enter Email"
            type="email"
            value="fake@gmail.com"
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="signin-email-input"
          >
            Email
          </label>
        </div>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <div
            class="css-d4h2in-EyeIconContainer e19wqegw0"
          >
            <svg
              class="css-4i3ax9-SVGIcon e26f57s0"
              fill="none"
              height="24"
              role="button"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Not visible
              </title>
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </div>
          <input
            class="css-m2sx8v-Input e19wqegw3"
            id="signin-password-input"
            placeholder="Enter Password"
            type="password"
            value="password1!"
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="signin-password-input"
          >
            Password
          </label>
        </div>
        <button
          class="css-ld93ky-TertiaryButton-SurfaceElevation-InlineButton-ForgotPasswordBtn eu4qea91"
        >
          Forgot Password?
        </button>
        <div
          class="css-lpzqfk-ErrorText eu4qea92"
        />
        <div
          class="css-1gb0ylu-Row-ButtonRow eu4qea96"
        >
          <button
            class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
          >
            Register
          </button>
          <button
            class="css-4i4kxd-SubmitButton epz85c30"
            title="Sign In"
          >
            Sign In
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      aria-label="signin modal"
      class="css-ga55b2-Container-SurfaceElevation eu4qea98"
    >
      <button
        aria-label="close signin modal"
        class="css-1mtcji3-TertiaryButton-SurfaceElevation-CloseButton eu4qea90"
      >
        ✕
      </button>
      <h1
        class="css-1r0k3v3-H1-TextMixin e1ez90bh0"
      >
        🦾 WORKOUT
      </h1>
      <h2
        class="css-15441py-H2-TextMixin ewijl6f0"
      >
        Sign In
      </h2>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <input
          class="css-1jng164-Input e19wqegw3"
          id="signin-email-input"
          placeholder="Enter Email"
          type="email"
          value="fake@gmail.com"
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="signin-email-input"
        >
          Email
        </label>
      </div>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <div
          class="css-d4h2in-EyeIconContainer e19wqegw0"
        >
          <svg
            class="css-4i3ax9-SVGIcon e26f57s0"
            fill="none"
            height="24"
            role="button"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Not visible
            </title>
            <path
              d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
        </div>
        <input
          class="css-m2sx8v-Input e19wqegw3"
          id="signin-password-input"
          placeholder="Enter Password"
          type="password"
          value="password1!"
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="signin-password-input"
        >
          Password
        </label>
      </div>
      <button
        class="css-ld93ky-TertiaryButton-SurfaceElevation-InlineButton-ForgotPasswordBtn eu4qea91"
      >
        Forgot Password?
      </button>
      <div
        class="css-lpzqfk-ErrorText eu4qea92"
      />
      <div
        class="css-1gb0ylu-Row-ButtonRow eu4qea96"
      >
        <button
          class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
        >
          Register
        </button>
        <button
          class="css-4i4kxd-SubmitButton epz85c30"
          title="Sign In"
        >
          Sign In
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SignIn renders forgot password screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="css-ga55b2-Container-SurfaceElevation eu4qea98"
      >
        <h1
          class="css-1891q7e-H1-TextMixin e1ez90bh0"
        >
          🦾 WORKOUT
        </h1>
        <h2
          class="css-12ejohh-H2-TextMixin ewijl6f0"
        >
          Forgot Password
        </h2>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <input
            class="css-1jng164-Input e19wqegw3"
            id="forgot-password"
            placeholder="Your account email"
            type="email"
            value=""
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="forgot-password"
          >
            Email
          </label>
        </div>
        <p
          class="css-44y8rz-P-TextMixin elrci8c0"
        />
        <div
          class="css-1gb0ylu-Row-ButtonRow eu4qea96"
        >
          <button
            class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
          >
            Cancel
          </button>
          <button
            class="css-4i4kxd-SubmitButton epz85c30"
          >
            Reset
          </button>
           
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="css-ga55b2-Container-SurfaceElevation eu4qea98"
    >
      <h1
        class="css-1891q7e-H1-TextMixin e1ez90bh0"
      >
        🦾 WORKOUT
      </h1>
      <h2
        class="css-12ejohh-H2-TextMixin ewijl6f0"
      >
        Forgot Password
      </h2>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <input
          class="css-1jng164-Input e19wqegw3"
          id="forgot-password"
          placeholder="Your account email"
          type="email"
          value=""
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="forgot-password"
        >
          Email
        </label>
      </div>
      <p
        class="css-44y8rz-P-TextMixin elrci8c0"
      />
      <div
        class="css-1gb0ylu-Row-ButtonRow eu4qea96"
      >
        <button
          class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
        >
          Cancel
        </button>
        <button
          class="css-4i4kxd-SubmitButton epz85c30"
        >
          Reset
        </button>
         
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SignIn renders loading screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1cp08ds-Shimmer e1oyx6lm0"
        height="300px"
        width="300px"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1cp08ds-Shimmer e1oyx6lm0"
      height="300px"
      width="300px"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SignIn renders registration screen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        aria-label="register modal"
        class="css-ga55b2-Container-SurfaceElevation eu4qea98"
      >
        <button
          aria-label="Close register modal"
          class="css-1mtcji3-TertiaryButton-SurfaceElevation-CloseButton eu4qea90"
        >
          ✕
        </button>
        <h1
          class="css-1r0k3v3-H1-TextMixin e1ez90bh0"
        >
          🦾 WORKOUT
        </h1>
        <h2
          class="css-15441py-H2-TextMixin ewijl6f0"
        >
          Register
        </h2>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <input
            class="css-1jng164-Input e19wqegw3"
            id="register-email-input"
            placeholder="Your email will not be displayed"
            type="email"
            value=""
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="register-email-input"
          >
            Email
          </label>
        </div>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <input
            autocomplete="off"
            class="css-1jng164-Input e19wqegw3"
            id="register-username-input"
            placeholder="larry_da_lobster"
            type="text"
            value=""
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="register-username-input"
          >
            Username
          </label>
        </div>
        <div
          class="css-fxp56y-ValidationContainer eu4qea93"
        >
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              Username must be unique.
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              2
              -
              20
               characters in length
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              No symbols ('-' and '_' are OK)
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              No whitespace
            </span>
          </div>
        </div>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <div
            class="css-d4h2in-EyeIconContainer e19wqegw0"
          >
            <svg
              class="css-4i3ax9-SVGIcon e26f57s0"
              fill="none"
              height="24"
              role="button"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Not visible
              </title>
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </div>
          <input
            autocomplete="new-password"
            class="css-m2sx8v-Input e19wqegw3"
            id="register-password-input-1"
            placeholder="Enter Password"
            type="password"
            value=""
          />
          <label
            class="css-1g1fvn4-Label e19wqegw4"
            for="register-password-input-1"
          >
            Password
          </label>
        </div>
        <div
          class="css-y7gdxi-Container e19wqegw5"
        >
          <div
            class="css-d4h2in-EyeIconContainer e19wqegw0"
          >
            <svg
              class="css-4i3ax9-SVGIcon e26f57s0"
              fill="none"
              height="24"
              role="button"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Not visible
              </title>
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </div>
          <input
            autocomplete="new-password"
            class="css-m2sx8v-Input e19wqegw3"
            disabled=""
            id="register-password-input-2"
            placeholder="Complete password above"
            type="password"
            value=""
          />
          <label
            class="css-rvqzo6-Label e19wqegw4"
            for="register-password-input-2"
          >
            Confirm Password
          </label>
        </div>
        <div
          class="css-fxp56y-ValidationContainer eu4qea93"
        >
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              <span
                class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
              >
                ABC
              </span>
               - at least 1 letter
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              <span
                class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
              >
                123
              </span>
               - at least 1 number
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              <span
                class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
              >
                !@$
              </span>
               - at least 1 symbol
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              <span
                class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
              >
                6
                -
                20
              </span>
               
              characters in length
            </span>
          </div>
          <div
            class="css-ul1z50-Row-ValidationRow eu4qea95"
          >
            <svg
              class="css-1x4i0de-SVGIcon e26f57s0"
              height="24px"
              role="img"
              viewBox="0 0 24 24"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Unchecked
              </title>
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <path
                d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
              />
            </svg>
            <span
              class="css-1sbxlw7-ValidationSpan eu4qea94"
            >
              Confirm password matches
            </span>
          </div>
        </div>
        <div
          class="css-lpzqfk-ErrorText eu4qea92"
        />
        <div
          class="css-1gb0ylu-Row-ButtonRow eu4qea96"
        >
          <button
            class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
          >
            Login
          </button>
          <button
            class="css-4i4kxd-SubmitButton epz85c30"
            title="Register"
          >
            Register
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      aria-label="register modal"
      class="css-ga55b2-Container-SurfaceElevation eu4qea98"
    >
      <button
        aria-label="Close register modal"
        class="css-1mtcji3-TertiaryButton-SurfaceElevation-CloseButton eu4qea90"
      >
        ✕
      </button>
      <h1
        class="css-1r0k3v3-H1-TextMixin e1ez90bh0"
      >
        🦾 WORKOUT
      </h1>
      <h2
        class="css-15441py-H2-TextMixin ewijl6f0"
      >
        Register
      </h2>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <input
          class="css-1jng164-Input e19wqegw3"
          id="register-email-input"
          placeholder="Your email will not be displayed"
          type="email"
          value=""
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="register-email-input"
        >
          Email
        </label>
      </div>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <input
          autocomplete="off"
          class="css-1jng164-Input e19wqegw3"
          id="register-username-input"
          placeholder="larry_da_lobster"
          type="text"
          value=""
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="register-username-input"
        >
          Username
        </label>
      </div>
      <div
        class="css-fxp56y-ValidationContainer eu4qea93"
      >
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            Username must be unique.
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            2
            -
            20
             characters in length
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            No symbols ('-' and '_' are OK)
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            No whitespace
          </span>
        </div>
      </div>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <div
          class="css-d4h2in-EyeIconContainer e19wqegw0"
        >
          <svg
            class="css-4i3ax9-SVGIcon e26f57s0"
            fill="none"
            height="24"
            role="button"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Not visible
            </title>
            <path
              d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
        </div>
        <input
          autocomplete="new-password"
          class="css-m2sx8v-Input e19wqegw3"
          id="register-password-input-1"
          placeholder="Enter Password"
          type="password"
          value=""
        />
        <label
          class="css-1g1fvn4-Label e19wqegw4"
          for="register-password-input-1"
        >
          Password
        </label>
      </div>
      <div
        class="css-y7gdxi-Container e19wqegw5"
      >
        <div
          class="css-d4h2in-EyeIconContainer e19wqegw0"
        >
          <svg
            class="css-4i3ax9-SVGIcon e26f57s0"
            fill="none"
            height="24"
            role="button"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Not visible
            </title>
            <path
              d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
        </div>
        <input
          autocomplete="new-password"
          class="css-m2sx8v-Input e19wqegw3"
          disabled=""
          id="register-password-input-2"
          placeholder="Complete password above"
          type="password"
          value=""
        />
        <label
          class="css-rvqzo6-Label e19wqegw4"
          for="register-password-input-2"
        >
          Confirm Password
        </label>
      </div>
      <div
        class="css-fxp56y-ValidationContainer eu4qea93"
      >
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            <span
              class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
            >
              ABC
            </span>
             - at least 1 letter
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            <span
              class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
            >
              123
            </span>
             - at least 1 number
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            <span
              class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
            >
              !@$
            </span>
             - at least 1 symbol
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            <span
              class="css-v5jw6b-NumberSpan-TextMixin evnodtx0"
            >
              6
              -
              20
            </span>
             
            characters in length
          </span>
        </div>
        <div
          class="css-ul1z50-Row-ValidationRow eu4qea95"
        >
          <svg
            class="css-1x4i0de-SVGIcon e26f57s0"
            height="24px"
            role="img"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Unchecked
            </title>
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <path
              d="M21.19,21.19L2.81,2.81L1.39,4.22l2.27,2.27C2.61,8.07,2,9.96,2,12c0,5.52,4.48,10,10,10c2.04,0,3.93-0.61,5.51-1.66 l2.27,2.27L21.19,21.19z M10.59,16.6l-4.24-4.24l1.41-1.41l2.83,2.83l0.18-0.18l1.41,1.41L10.59,16.6z M13.59,10.76l-7.1-7.1 C8.07,2.61,9.96,2,12,2c5.52,0,10,4.48,10,10c0,2.04-0.61,3.93-1.66,5.51l-5.34-5.34l2.65-2.65l-1.41-1.41L13.59,10.76z"
            />
          </svg>
          <span
            class="css-1sbxlw7-ValidationSpan eu4qea94"
          >
            Confirm password matches
          </span>
        </div>
      </div>
      <div
        class="css-lpzqfk-ErrorText eu4qea92"
      />
      <div
        class="css-1gb0ylu-Row-ButtonRow eu4qea96"
      >
        <button
          class="css-ak8ya3-SecondaryButton-SurfaceElevation e1dg5x0l0"
        >
          Login
        </button>
        <button
          class="css-4i4kxd-SubmitButton epz85c30"
          title="Register"
        >
          Register
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
